# SNNPy

./: .gitignore  CMakeLists.txt  README.md  snnpy.c  testingg.py
CiffPy/: LinearRegressionModel.c  __init__.py
externalCLibs/exceptions4c-3.0.5/: NOTICEME.md
extlibs/testing-0.0.1/src/: testing.c  testing.h
include/: costFunction.h  neuralNetworkFuncs.h  neuralNetworkInit.h  neuralNetworkOperations.h  neuralNetworkStructs.h  neuralNetworkTraining.h  neuronFuncs.h  neuronUtility.h  nodeUtility.h  sigmoid.h  vectorOperations.h
libs/exceptions4c-3.0.5/: NOTICEME.md
libs/testing-0.0.1/src/: testing.c  testing.h
snn/: CMakeLists.txt
snn/extclibs/testing-0.0.1/: README.md
snn/extclibs/testing-0.0.1/src/: testing.c
snn/src/: neuralNetworkInit.c  neuralNetworkTraining.c  neuralNetworkUtility.c  nnMemManagement.c  randomValueGenerator.c  tests.c
snn/src/include/: costFunctions.h  funcPtrs.h  neuralNetworkOperations.h  neuralNetworkTraining.h  neuralNetworkUtility.h  nnMemManagement.h
snnpy/: __init__.py  _lib_util.py  neuralnetwork.py  snn_py.py
src/: activationFunctions.c  costFunction.c  costFunctions.c  main.c  neuralNetworkFuncs.c  neuralNetworkInit.c  neuralNetworkOperations.c  neuralNetworkTraining.c  neuralNetworkUtility.c  neuron.c  neuron.h  neuronUtility.c  nnMemManagement.c  nodeUtility.c  randomValueGenerator.c  sigmoid.c  snnbenchmark.c  tests.c  vectorOperations.c
src/include/: activationFunctions.h  costFunctions.h  funcPtrs.h  neuralNetworkInit.h  neuralNetworkOperations.h  neuralNetworkStructs.h  neuralNetworkTraining.h  neuralNetworkUtility.h  nnMemManagement.h  randomValueGenerator.h  tests.h  vectorOperations.h
tests/: benchmarkTest.c  main.c  tests.c
